--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            Suitify by Aditya kumar
+           icon
         </title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -11,26 +11,9 @@
 	    <link rel="shortcut icon" href="https://i.pinimg.com/originals/0b/a2/d4/0ba2d4b0c24d896fb45f9581c5e660a6.png">
     </head>
     <body>
-        <link rel="stylesheet" type="text/css" href="kwitter.css">
-        <script src="kwitter.js"></script>
 
         <center>
-            <h1 class="header">	
-                Suitify	<sup>
-            <img src="m2.png">
-            </sup>
-        </h1>
-            <div class="col-lg-6 col-md-8 col-sm-8 col-xs-11 login_div">
             <img src="Icon.png" class="logo">
-                <h3 >See what is happening in the world right now</h3>
-                <h4 >Join Suitify today</h4>
-                <div class="form-group">
-                  <label >User Name:</label>
-                  <input type="text" id ="user_name" class="form-control" placeholder="User Name">
-                </div>
-                <button id="login_button" class="btn" onclick="addUser()">Log in</button>
-                <br><br>
-            </div>
-        </center>
+                </center>
         </body>
         </html>
